--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@ __pycache__/
 # Distribution / packaging
 .Python
 env/
-build/
+**/build/
 develop-eggs/
-dist/
+**/dist/
 downloads/
 eggs/
 .eggs/
